# rt-api

./: .env  .gitignore  Cargo.toml  db_query.sql
.cargo/: config
src/: db.rs  main.rs  migration.rs  queries.rs
src/auth/: auth.rs  errors.rs  models.rs
src/models/: api.rs  db.rs
src/routes/: mod.rs
src/schema/: mod.rs
src/services/: api.rs
