[package]
name = "rt-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
actix-rt = "2.0"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.15.0"