[package]
name = "rt-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8"
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "uuid", "time", "chrono", "macros", "migrate"] }
uuid = {version = "1.2.2", features = ["v4", "macro-diagnostics", "serde"]} 
chrono = {version = "0.4.23", features = ["serde"]}
load-dotenv = "0.1.2"
openssl = { version = "0.10.35", features = ["vendored"] }
actix-cors = "0.6.4"
reqwest = { version = "0.11.14", features = ["json", "serde_json"] }
jsonwebtoken = "8.2.0"
rand = "0.8"
